<resources>
    <string name="app_name" translatable="false">CodinSchool.</string>

    // SharedPref Vars
    <string name="remember_me" translatable="false">remember_me</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="token" translatable="false">token</string>
    <string name="apikeypixabay" translatable="false">12798900-ca01678f7e4820e80f3435d26</string>


    <string name="network_error_network_error">Cannot connect to Internet… Please check your connection!</string>
    <string name="network_error_server_error">The server could not be found. Please try again after some time!!</string>
    <string name="network_error_auth_failure">Your request have been refused !</string>
    <string name="network_error_parser_error">Parsing error! Please try again after some time!!</string>
    <string name="network_error_time_out">Connection TimeOut! Please check your internet connection.</string>

    <string name="c_d_button_to_my_classes" translatable="false">Button to my classes</string>
    <string name="button_label_delete">delete</string>
    <string name="message_classe_list_error">Your classe list is empty</string>
    <string name="welcoming_msg">Hello %1$s</string>
    <string name="background_powered_by_pixabay_api">Background powered by Pixabay API</string>
    <string name="datalabel">%1$s</string>
    <string name="message_user_connected">Connected as %1$s .</string>
    <string name="classe_list_as_professor_label">My classes</string>
    <string name="classe_list_as_student_label">Member of</string>
    <string name="fragment_classes_list_title_label">Classes</string>
    <string name="empty_message_for_dialog_fragment" translatable="false">%1$s</string>

    <string name="classe_label" >Classe %1$s %2$d user(s)</string>
    <string name="user_grid_layout_label" translatable="false">%1$s</string>
    <string name="professors_label">Professors %1$s</string>
    <string name="students_label">Students %1$s</string>
    <string name="classe_details_fragment_title">Classe details</string>
    <string name="button_close_label">Close</string>
    <string name="button_add_dialog_fragment_classe">add</string>
    <string name="search_an_user_dialog_fragment_classe">Search an user :</string>
    <string name="name_or_email_hint_dialog_fragment_classe">Name or Email</string>
    <string name="list_of_new_user_clic_to_remove_user">List of new user (clic to remove user)</string>
    <string name="title_exercice_list">Exercices</string>
    <string name="title_exercice_detail">Exercice Detail</string>
    <string name="simple_string_placeholder" translatable="false">%1$s</string>
    <string name="button_play">run</string>

    <string name="exercice_fragment_exercice_creator_label">Creator :</string>
    <string name="exercice_fragment_exercice_description">Description :</string>
    <string name="exercice_fragment_exercice_name">Name :</string>
    <string name="exercice_fragment_visibility_status_label">Visibility status :</string>
    <string name="my_exercices_list_label">My exercices</string>
    <string name="from_store_list_label">From store</string>
    <string name="from_classe_list_label">From my classes</string>
    <string name="exercice_grid_label">Exercice grid</string>
    <string name="functions_list_label">Functions</string>
    <string name="remove_codeblock_message_dialog_box">Are you sure to do this ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="primary_function_label">Primary function</string>
    <string name="exercice_functions_label">Exercice Functions</string>
    <string name="dialog_fragment_edit_block_end">End</string>
    <string name="dialog_fragment_edit_block_start">Start</string>
    <string name="code_block_boucle_title">For</string>
    <string name="code_block_condition_title">If</string>
    <string name="button_apply">Apply</string>
    <string name="select_your_condition_below">Select your condition below</string>
    <string name="enter_a_start_and_a_end">Enter a start and a end</string>
    <string name="apply">Apply</string>
    <string name="test_details">Test details</string>
    <string name="tests">Tests :</string>
    <string name="result_details">Result details</string>
    <string name="congratulations">Congratulations :)</string>
    <string name="fail">Fail :(</string>
    <string name="replay">replay</string>
    <string name="list_of_tests">List of tests</string>
    <string name="store_empty_exercice_list">There is no exercice available for you</string>
    <string name="fork_succes">Exercice forked with success !</string>
    <string name="icon_label_credits">Icons made by %1$s from www.flaticon.com</string>
    <string name="store">Store</string>
    <string name="classes">Classes</string>
    <string name="exercice">Exercice</string>
    <string name="look_in_the_store">Look in the store</string>
    <string name="last_exercice_added">Last exercice added</string>
    <string name="email">email</string>

</resources>
