<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="8dp"
              android:background="@color/white"
              android:id="@+id/content">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/root">

        <TextView
                android:text="@string/title_exercice_detail"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content" android:id="@+id/fragmentTitle"
                style="@style/MediumTitle"

                android:textAlignment="center" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/semitransparentblack"
                android:id="@+id/separation"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/fragmentTitle"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content" android:id="@+id/nameSection">

        <TextView
                android:layout_height="wrap_content"
                android:text="@string/simple_string_placeholder"
                android:id="@+id/exercice_name"
                android:gravity="bottom"
                android:layout_weight="3"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1.0"/>
        <TextView
                android:text="@string/exercice_fragment_exercice_name"
                android:gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MainTheme" android:id="@+id/textView4" android:layout_weight="2"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/exercice_fragment_visibility_status_label"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content" android:id="@+id/visibilityStatusLabel"
                app:layout_constraintEnd_toStartOf="@+id/imageViewVisibility" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewVisibility"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content" android:id="@+id/creatorSection">
        <TextView
                android:text="@string/exercice_fragment_exercice_creator_label"
                style="@style/MainTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <include layout="@layout/user_grid_layout"
                 android:id="@+id/userView" app:layout_constraintStart_toEndOf="@+id/textView3"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent" android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>

    </android.support.constraint.ConstraintLayout>
    <TextView
            android:text="@string/exercice_fragment_exercice_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="@style/MainTheme"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_string_placeholder"
            android:id="@+id/exercice_description"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exercice_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="textStart"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:text="@string/button_play"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonPlay"
                android:background="@drawable/button_round_blue"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textSize="24sp"

                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="64dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:indeterminateDrawable="@drawable/progress"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/progressBar"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0"/>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>