<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".controllers.classes_menu.ClasseDetailsFragment"
             android:background="@color/white" android:id="@+id/root">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/classe_details_fragment_title"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_height="wrap_content" android:id="@+id/fragmentTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center" android:layout_marginTop="8dp"/>
        <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/semitransparentwhite"
                android:id="@+id/separation" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="64dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="64dp"
                app:layout_constraintTop_toBottomOf="@+id/fragmentTitle" android:layout_marginTop="8dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classe_label"
                android:id="@+id/classeLabel"
                app:layout_constraintTop_toBottomOf="@id/fragmentTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="24dp"/>

        <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/classeLabel"
                      app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
                      android:id="@+id/linearLayout"
        >
            <TextView
                    android:text="@string/professors_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/professorLabel"/>
            <GridView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="200dp"
                    android:layout_gravity="start"
                    android:horizontalSpacing="0dp"
                    android:numColumns="4"
                    android:layoutDirection="ltr"
                    app:layout_constraintTop_toBottomOf="@+id/classeLabel"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/gridProfessors" android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text="@string/students_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/studentLabel"/>
            <GridView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:horizontalSpacing="0dp"
                    android:layout_gravity="start"
                    android:numColumns="6"
                    android:minHeight="200dp"
                    android:stretchMode="columnWidth"
                    android:layoutDirection="ltr"
                    android:id="@+id/gridStudents" android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>
        <Button
                android:text="@string/button_close_label"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonClose"
                android:background="@drawable/button_round_blue"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textSize="24sp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <android.support.design.widget.FloatingActionButton android:layout_width="wrap_content"
                                                            android:layout_height="wrap_content"
                                                            android:layout_marginBottom="8dp"
                                                            android:layout_marginEnd="16dp"
                                                            android:background="@drawable/fab"
                                                            android:src="@android:drawable/ic_search_category_default"
                                                            android:foregroundGravity="center"

                                                            app:fabSize="normal"
                                                            app:backgroundTint="@color/blue"
                                                            app:borderWidth="0dp"
                                                            app:elevation="2dp"
                                                            app:pressedTranslationZ="12dp"

                                                            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                                                            app:layout_constraintEnd_toEndOf="parent"
                                                            android:tint="@color/white" android:id="@+id/buttonSearch"/>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>