<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:clipToPadding="false"
                                    app:cardCornerRadius="16dp" app:cardElevation="2dp" android:id="@+id/root">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/resultLabel"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="32dp" app:layout_constraintHorizontal_bias="0.0"
                android:id="@+id/linearLayout3">
            <com.example.code4all.customviews.MyEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editTextStart"
                    android:background="@drawable/edit_rounds"
                    android:textColor="@color/black"
                    android:paddingStart="20dp"
                    android:paddingEnd="5dp"
                    android:hint="@string/dialog_fragment_edit_block_start"
                    android:layout_weight="0.50"/>
            <com.example.code4all.customviews.MyEditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:paddingStart="20dp"
                    android:paddingEnd="5dp"
                    android:id="@+id/editTextEnd"
                    android:background="@drawable/edit_rounds"
                    android:textColor="@color/black"
                    android:hint="@string/dialog_fragment_edit_block_end"
                    tools:layout_editor_absoluteY="289dp" tools:layout_editor_absoluteX="166dp"
                    android:layout_weight="0.50"/>
        </LinearLayout>
        <Button
                android:text="Apply"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonApply"
                android:background="@drawable/button_round_blue"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/enter_a_start_and_a_end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:id="@+id/resultLabel"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
