<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:clipToPadding="false"
                                    app:cardCornerRadius="16dp" app:cardElevation="2dp" android:id="@+id/root">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:text="@string/button_add_dialog_fragment_classe"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAdd"
                android:background="@drawable/button_round_blue"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textSize="24sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/newUserList"/>
        <TextView
                android:text="@string/search_an_user_dialog_fragment_classe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resultLabel" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
        />
        <com.example.codinschool.customviews.MyEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editTextNameOrEmail" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/resultLabel" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:background="@drawable/edit_rounds"
                android:drawableStart="@android:drawable/ic_menu_myplaces"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:drawablePadding="5dp"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:hint="@string/name_or_email_hint_dialog_fragment_classe"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/progressBar"
                android:autofillHints=""/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateDrawable="@drawable/progress"
                android:id="@+id/progressBar" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/editTextNameOrEmail"
                app:layout_constraintBottom_toBottomOf="@+id/editTextNameOrEmail" android:visibility="gone"/>
        <android.support.v7.widget.RecyclerView
                android:layout_width="0dp"
                android:background="@color/text"
                android:maxHeight="300dp"
                android:layout_height="wrap_content" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextNameOrEmail" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:scrollbars="vertical" android:id="@+id/userList">
        </android.support.v7.widget.RecyclerView>
        <TextView
                android:text="@string/list_of_new_user_clic_to_remove_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/newUserListLabel"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/userList"
                android:visibility="gone"/>
        <android.support.v7.widget.RecyclerView
                android:layout_width="0dp"
                android:background="@color/text"
                android:layout_height="wrap_content"
                android:maxHeight="200dp"
                android:scrollbars="vertical" android:id="@+id/newUserList"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/newUserListLabel">
        </android.support.v7.widget.RecyclerView>
        <android.support.v7.widget.SwitchCompat
                android:text="as Professor ?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="SCBSwitch"
                android:id="@+id/switchProfessor"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/resultLabel"
                app:layout_constraintBottom_toBottomOf="@+id/resultLabel"
        />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
